# fabrik

./: .codeiumignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  AGENTS.md.backup.20260219-115148  CHANGELOG.md  Dockerfile  Makefile  PORTS.md  README.md  compose.yaml  plan_review.json  pyproject.toml  tasks.md  windsurfrules
.factory/hooks/: fabrik-conventions.py  format-python.sh  (+5 more)
.windsurf/: hooks.json
config/: models.yaml  platform.yaml.example
docs/: BUSINESS_MODEL.md  CASCADE_MEMORIES_EXPORT_PART1.md  CASCADE_MEMORIES_EXPORT_PART2.md  CASCADE_RULES_EXPORT_GLOBAL.md  CASCADE_RULES_EXPORT_WORKSPACE_PART2.md  CASCADE_RULES_EXPORT_WORKSPACE_PART4.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_READY_CHECKLIST.md  ENVIRONMENT_VARIABLES.md  FABRIK_OVERVIEW.md  FAQ.md  FUTURE_WORK.md  INDEX.md  QUICKSTART.md  README.md  ROADMAP_ACTIVE.md  SERVICES.md  TESTING.md  TROUBLESHOOTING.md  WHATS_NEXT.md  future-development.md  owner_ozgur_basak.md  step1-domain-hosting-validation.md  wordpress-pages-idempotency.md  wordpress-v2-architecture.md  wordpress-v2-fixes.md
infrastructure/: coolify-ssh-permissions.service  coolify-ssh-permissions.sh  coolify-ssh-permissions.timer
scripts/: .droid_models_cache.json  .droid_sessions.json  .droid_token_usage.jsonl  .model_deprecations.json  .model_update_cache.json  acknowledge_reviews.py  check.sh  container_images.py  docs_sync.py  docs_updater.py  droid-review.sh  droid_core.py  droid_model_updater.py  droid_models.py  droid_runner.py  droid_runner_integration_example.py  droid_session.py  droid_tasks.py  duplicati-vps-backup.json  health_check_autonomous.py  pipeline_runner.py  process_monitor.py  review_processor.py  review_worker.py  rollback_hooks.sh  runc  rund  rundsh  runk  setup_duplicati_backup.py  setup_model_updates.sh  setup_uptime_kuma.py  sync_extensions.sh  sync_memories.sh  test_process_monitor.py  verify.sh  watchdog.sh
specs/: DROID-SYSTEM-CLEANUP-PLAN.md  FABRIK_CONDUCTOR_CONSENSUS_PLAN.md  FABRIK_CONDUCTOR_PLAN.md  FABRIK_CONSOLIDATED_GAP_ANALYSIS.md  FABRIK_GAP_ANALYSIS_PROMPT.md  WINDSURF_FABRIK_INTEGRATION_ARCH.md  example-api.yaml  worker-example.yaml
sql/: phase1b_ddl.sql
tests/: __init__.py  test_docs_updater.py  test_droid_core.py  test_enforcement.py  test_health_app.py  test_pipeline_runner.py
windsurf-memories/: 01-mandatory-run-docs-sync-after-code-changes.md  02-critical-use-auto-default-for-read-only-reviews.md  03-cascade-must-get-user-permission-before-creating-new-doc-files.md  04-check-existing-code-before-creating-new-scripts.md  05-users-factory-settings-json-full-automation-config.md  06-fabrik-development-mindset-think-beyond-fabrik.md  07-password-policy-csprng-required.md  08-must-check-for-running-droid-exec-before-launching-new-ones.md  09-planning-phase-reference-files.md  10-must-check-templates-before-creating-any-document.md  11-droid-exec-wrapper-scripts-updated-after-consolidation.md  12-mandatory-use-droid-review-sh-for-all-code-reviews.md  13-one-test-rule-enforcement-for-code-changes.md  14-long-command-monitoring-prevent-stuck-commands.md  15-cascade-must-get-user-approval-before-skipping-ai-review.md  16-vps1-is-arm64-architecture.md
(+438 files in other folders)
