[project]
name = "fabrik"
version = "0.1.0"
description = "Deployment automation CLI for AI-powered infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Özgür Başak" }
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
fabrik = "fabrik.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabrik"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long
    "B904",   # raise from - CLI exits don't need chaining
    "SIM102", # nested if - sometimes clearer
    "SIM105", # contextlib.suppress - explicit try/except more readable
    "SIM117", # nested with - sometimes clearer
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "^scripts/",  # Standalone scripts, not part of package
    "^tests/",
    "^templates/",
]

[[tool.mypy.overrides]]
module = ["rich.*", "yaml.*", "httpx.*", "dotenv.*", "psutil.*", "uptime_kuma_api.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fabrik.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
